fixed photo height to work on safari

--- a/client/src/components/AboutImage/style.css
+++ b/client/src/components/AboutImage/style.css
@@ -1,4 +1,3 @@
 .head-shot {
-    max-width: 82%;
-    height: auto;
+    height: 260px;
 }
